plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'idea'
}

version = mod_version
group = mod_group_id

sourceSets.main.resources {
    srcDir('src/generated/resources')
    exclude("**/*.bbmodel")
    exclude("src/generated/**/.cache")
}

sourceSets {
    androidBridge {
        java {
            srcDir('src/androidBridge/java')
        }
    }
    poiBridge {
        java {
            srcDir('src/poiBridge/java')
        }
    }
}

repositories {
    mavenCentral()
    maven { url = "https://maven.createmod.net" }
    maven { url = "https://maven.ithundxr.dev/snapshots" }
    maven { url = "https://maven.blamejared.com" }
    maven { url = "https://api.modrinth.com/maven" }
    maven { url = "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/" }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version
    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
        gameTestServer {
            type = "gameTestServer"
        }
        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }
        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
    javacvRaw
    bytedecoBundle
}

def currentOs = System.getProperty("os.name").toLowerCase(Locale.ROOT)
def currentArch = System.getProperty("os.arch").toLowerCase(Locale.ROOT)
def arm64 = currentArch.contains("aarch64") || currentArch.contains("arm64")
def bytedecoPlatform = currentOs.contains("win") ? (arm64 ? "windows-arm64" : "windows-x86_64") :
        currentOs.contains("mac") ? (arm64 ? "macosx-arm64" : "macosx-x86_64") :
        (arm64 ? "linux-arm64" : "linux-x86_64")

def bundledPlatforms = (project.findProperty('bundled_platforms') ?:
        'windows-x86_64,linux-x86_64,linux-arm64,macosx-x86_64,macosx-arm64,android-arm64')
        .toString().split(',').collect { it.trim() }.findAll { !it.isEmpty() }

def strippedJavaCv = tasks.register("strippedJavaCv", Jar) {
    archiveFileName = "javacv-${javacv_version}-stripped.jar"
    destinationDirectory = layout.buildDirectory.dir("stripped-libs")
    from({ configurations.javacvRaw.collect { zipTree(it) } })
    exclude "module-info.class"
    exclude "META-INF/versions/*/module-info.class"
    exclude "META-INF/*.SF", "META-INF/*.RSA", "META-INF/*.DSA"
    manifest {
        attributes("Automatic-Module-Name": "org.bytedeco.javacv")
    }
}

dependencies {
    implementation("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
    implementation("net.createmod.ponder:ponder-neoforge:${ponder_version}+mc${minecraft_version}")
    compileOnly("dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_version}")
    runtimeOnly("dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}")
    implementation("com.tterrag.registrate:Registrate:${registrate_version}")
    compileOnly("mezz.jei:jei-1.21.1-neoforge-api:${jei_version}")
    if (project.hasProperty("withJei")) {
        runtimeOnly("mezz.jei:jei-1.21.1-neoforge:${jei_version}")
    }
    implementation("org.jsoup:jsoup:1.18.3")
    additionalRuntimeClasspath("org.jsoup:jsoup:1.18.3")
    jarJar("org.jsoup:jsoup:1.18.3")
    poiBridgeImplementation("org.apache.poi:poi-ooxml:5.2.5") {
        exclude group: "org.apache.logging.log4j"
    }
    poiBridgeImplementation("org.apache.poi:poi-scratchpad:5.2.5") {
        exclude group: "org.apache.logging.log4j"
    }

    javacvRaw("org.bytedeco:javacv:${javacv_version}") { transitive = false }
    implementation(files(strippedJavaCv))
    implementation("org.bytedeco:ffmpeg:${ffmpeg_version}")
    additionalRuntimeClasspath(files(strippedJavaCv))
    additionalRuntimeClasspath("org.bytedeco:javacpp:${javacv_version}")
    additionalRuntimeClasspath("org.bytedeco:ffmpeg:${ffmpeg_version}")
    if (bundledPlatforms.contains(bytedecoPlatform)) {
        additionalRuntimeClasspath("org.bytedeco:javacpp:${javacv_version}:${bytedecoPlatform}")
        additionalRuntimeClasspath("org.bytedeco:ffmpeg:${ffmpeg_version}:${bytedecoPlatform}")
    }

    bytedecoBundle("org.bytedeco:javacpp:${javacv_version}")
    bytedecoBundle("org.bytedeco:ffmpeg:${ffmpeg_version}")

    androidBridgeImplementation('com.google.android:android:4.1.1.4')
}

def poiRuntimeBundle = tasks.register("poiRuntimeBundle", Jar) {
    archiveFileName = "poi-runtime.jar"
    destinationDirectory = layout.buildDirectory.dir("private-libs")
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from sourceSets.poiBridge.output
    from({ configurations.poiBridgeRuntimeClasspath.collect { zipTree(it) } })
    exclude "module-info.class"
    exclude "META-INF/versions/*/module-info.class"
    exclude "META-INF/*.SF", "META-INF/*.RSA", "META-INF/*.DSA"
    exclude "org/apache/logging/log4j/**"
}

// Gradle collapses multiple Maven classifiers for the same module in one configuration. Keep each
// target ABI in its own detached configuration so the fat jar always receives every requested native.
def platformNativeBundles = bundledPlatforms.collect { platform ->
    def javacppNative = dependencies.create("org.bytedeco:javacpp:${javacv_version}:${platform}")
    def ffmpegNative = dependencies.create("org.bytedeco:ffmpeg:${ffmpeg_version}:${platform}")
    javacppNative.transitive = false
    ffmpegNative.transitive = false
    configurations.detachedConfiguration(javacppNative, ffmpegNative)
}

tasks.named('jar', Jar).configure {
    dependsOn strippedJavaCv, poiRuntimeBundle
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    inputs.property("bundledPlatforms", bundledPlatforms)
    inputs.files(platformNativeBundles)
    from sourceSets.androidBridge.output
    from({ zipTree(strippedJavaCv.get().archiveFile.get().asFile) }) {
        exclude "module-info.class"
        exclude "META-INF/versions/*/module-info.class"
        exclude "META-INF/*.SF", "META-INF/*.RSA", "META-INF/*.DSA"
    }
    from({
        def artifacts = new ArrayList(configurations.bytedecoBundle.files)
        platformNativeBundles.each { bundle -> artifacts.addAll(bundle.files) }
        artifacts.collect { zipTree(it) }
    }) {
        exclude "module-info.class"
        exclude "META-INF/versions/*/module-info.class"
        exclude "META-INF/*.SF", "META-INF/*.RSA", "META-INF/*.DSA"
    }
    from(poiRuntimeBundle.flatMap { it.archiveFile }) {
        into "META-INF/createcinema"
    }
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven { url "file://${project.projectDir}/repo" }
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
